# discord-banpool

./: .env.example  .gitignore  Cargo.toml  README.md  log4rs.yaml
src/: main.rs
src/commands/: bans.rs  exceptions.rs  mod.rs  notifications.rs  pool_management.rs  pools.rs  subscriptions.rs
src/db/: mongo.rs
