[package]
name = "bot"
version = "0.1.0"
edition = "2021"
authors = [ "katagatame_ <developer@kata.codes>", "gradius <gradiuscypher@gmail.com>" ]

[features]
default = [ "vote" ]
vote = [ ]
cache = [ "serenity/cache" ]

[dependencies.async-trait]
version = "0.1.68"

[dependencies.chrono]
version = "0.4.24"

[dependencies.concat-string]
version = "1.0.1"

[dependencies.dotenv]
version = "0.15.0"

[dependencies.env_logger]
version = "0.10.0"

[dependencies.futures]
version = "0.3.13"
default-features = false

[dependencies.futures-core]
version = "0.3.28"

[dependencies.futures-util]
version = "0.3.28"

[dependencies.once_cell]
version = "1.17.1"
features = [ "std" ]

[dependencies.poise]
version = "0.5.5"

[dependencies.poise_macros]
version = "0.5.5"

[dependencies.reqwest]
version = "0.11"
features = [ "json" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.serenity]
version = "0.11.5"
features = [ "builder", "client", "gateway", "model", "utils", "collector" ]
default-features = false

[dependencies.spacedust]
version = "1.0.5"

[dependencies.substring]
version = "1.4.0"

[dependencies.tokio]
version = "1.28.0"
features = [ "full" ]
