[package]
name = "bot"
version = "0.1.0"
edition = "2021"
authors = [ "gradius <gradiuscypher@gmail.com>" ]

[features]
cache = [ "serenity/cache" ]

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.24"
concat-string = "1.0.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-core = "0.3.28"
futures-util = "0.3.28"
poise_macros = "0.5.5"
poise = "0.5.5"
substring = "1.4.0"
thiserror = "1.0.30"
mongodb = "2.1.0"
anyhow = "1.0"
log4rs = "1.1.1"
log = "0.4.17"
bson = { version = "2", features = ["chrono-0_4"] }

[dependencies.futures]
version = "0.3.13"
default-features = false

[dependencies.once_cell]
version = "1.17.1"
features = [ "std" ]

[dependencies.reqwest]
version = "0.11"
features = [ "json" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.serenity]
version = "0.11.5"
features = [ "builder", "client", "gateway", "model", "utils", "collector" ]
default-features = false

[dependencies.tokio]
version = "1.28.0"
features = [ "full" ]
